<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory 
        android:title="Auto data sync" 
        android:key="sync_settings">
        
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_checkout_toast"
            android:summary="@string/pref_sum_toast"
            android:title="@string/pref_toast_title" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_checkout_notification"
            android:summary="@string/pref_su_notification"
            android:title="@string/pref_notification_title" />

<!--        <ListPreference
            android:dependency="@string/pref_sync"
            android:dialogTitle="@string/pref_syncConnectionType"
            android:entries="@array/pref_syncConnectionTypes_entries"
            android:entryValues="@array/pref_syncConnectionTypes_values"
            android:key="@string/pref_sync_list"
            android:title="@string/pref_syncConnectionType" 
            android:summary="%s"
            android:defaultValue="1"/>
        <EditTextPreference
            android:key="@string/pref_edit"
            android:title="Input data">
        </EditTextPreference>-->
        
    </PreferenceCategory>

</PreferenceScreen>